Chicama terminado - correcion de centrado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>	
 	<!-- Header -->
-	<header>
+	<header id="header">
 		<div class="container">
 			<div class="row">
 				<!-- Sumate -->
@@ -35,18 +35,19 @@
 	<section id="Galeria">
 		<div class="container">
 			<div class="row">
+				<div class="col-12 mgb-5 mgt-4">
 				<!-- Img 1 -->
-				<div class="col-4 mgt-5 mgb-5">
+				<div class="inline">
 					<img src="img/grupal.jpg">
 					<p>EL LENGUAJE DEL FUTURO</p>
 				</div>
 				<!-- Img 2 -->
-				<div class="col-4 mgt-5 mgb-5">
+				<div class="inline">
 					<img src="img/grupal.jpg">
 					<p>EL LENGUAJE DEL FUTURO</p>
 				</div>
 				<!-- Img 3 -->
-				<div class="col-4 mgt-5 mgb-5">
+				<div class="inline">
 					<img src="img/grupal.jpg">
 					<p>EL LENGUAJE DEL FUTURO</p>
 				</div>
